# cmake-arm-gcc-project-template

./: .clang-format  CMakeLists.txt  README.md
cmake/: include_directories.cmake  source_files.cmake  unity.cmake
cmake/post_build/: objcopy_to_hex_bin.cmake  report_firmware_size.cmake
cmake/pre_build/: reset_map_file.cmake
cmake/toolchains/: arm-gcc-toolchain.cmake  x86-gcc-toolchain.cmake
projects/app/: CMakeLists.txt
projects/app/cmake/: c_flags.cmake  include_directories.cmake  source_files.cmake
src/: CMakeLists.txt  main.c
src/_cmake/: build_profiles.cmake  c_definitions.cmake  common_compiler_flags.cmake  common_linker_flags.cmake  linker.cmake
src/add_one/: add_one.c  add_one.h
src/add_two/: add_two.c  add_two.h
src/board/: board.h
src/stm32/Core/Src/: stm32f4xx_hal_msp.c  stm32f4xx_it.c
tests/: CMakeLists.txt
tests/add_one/: CMakeLists.txt  test_add_one.c
tests/add_two/: CMakeLists.txt  test_add_two.c
